-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17
-
Component/s: hotspot
-
b19
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8285996 | 11.0.17-oracle | Harold Seigel | P4 | Resolved | Fixed | b01 |
| JDK-8285694 | 11.0.16 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
I tried to build OpenJDK with g++-10.2.1_pre1-r3 on Alpine Linux 3.13.2, but I saw following warning:
/home/jdk/github-forked/jdk/src/hotspot/os/linux/os_linux.cpp:668:9: error: ignoring return value of 'void* __builtin_alloca(long unsigned int)' declared with attribute 'warn_unused_result' [-Werror=unused-result]
668 | alloca(((pid ^ counter++) & 7) * 128);
| ^
cc1plus: all warnings being treated as errors
/home/jdk/github-forked/jdk/src/hotspot/os/linux/os_linux.cpp:668:9: error: ignoring return value of 'void* __builtin_alloca(long unsigned int)' declared with attribute 'warn_unused_result' [-Werror=unused-result]
668 | alloca(((pid ^ counter++) & 7) * 128);
| ^
cc1plus: all warnings being treated as errors
- backported by
-
JDK-8285694 unused-result warning happens at os_linux.cpp
-
- Resolved
-
-
JDK-8285996 unused-result warning happens at os_linux.cpp
-
- Resolved
-
- relates to
-
JDK-8267908 linux: thread_native_entry can scribble on stack frame
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/987f7af5
-
Commit
openjdk/jdk/f1d4ae6c
-
Review
openjdk/jdk11u-dev/1039
-
Review
openjdk/jdk/3042
(2 links to)