8263718: unused-result warning happens at os_linux.cpp